# device-ops

./: .gitignore  README.md  pyproject.toml
device_ops/: cli.py
