[tool.poetry]
name = "sensor-ops"
version = "0.1.0"
description = ""
authors = ["surdouski <michael.surdouski@gmail.com>"]
readme = "README.md"
packages = [{include = "sensor_ops"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
